@@ -28,6 +28,7 @@ gsubfn <- function(pattern, replacement, x, backref, USE.NAMES = FALSE,
 	eval(parse(text = paste(b1,b2,sep="")), env) 
    if (is.character(replacement)) 
 	return(base::gsub(pattern, replacement, x, ...))
+   if (inherits(replacement, "formula")) replacement <- as.function(replacement)
    if (missing(pattern)) pattern <- "[$]([[:alpha:]][[:alnum:].]*)|`([^`]+)`"
    if (missing(backref)) {
         i <- 1
