@@ -16,10 +16,14 @@ strapply(X, pattern, FUN = function(x, ...) x, ...,
           character string for \code{"'fixed = TRUE')"} to be matched in the
           given character vector.
 }
-  \item{FUN}{ the function to be applied to each element of \code{"'X'"}. }
+  \item{FUN}{ the function or formula to be applied to each element of 
+          \code{"'X'"}.  See discussion in \code{\link{gsubfn}}. }
   \item{\dots}{ optional arguments to \code{"'gsubfn'"}. }
-  \item{simplify}{  logical; should the result be simplified to a vector or
-          matrix, as in \code{"sapply"} if possible?}
+  \item{simplify}{  logical or function.  If logical, should the result be 
+          simplified to a vector or matrix, as in \code{"sapply"} if possible?
+          If function, that function is applied to the result with each
+          component of the result passed as a separate argument.  Typically
+          if the form is used it will typically be specified as rbind.}
   \item{USE.NAMES}{ 
 logical; if \code{"'TRUE'"} and if \code{"'X'"} is character, use 
 \code{"'X'"} as
@@ -42,9 +46,13 @@ A list of character strings.
 strapply("12;34:56,89,,12", "[0-9]+")
 
 # separate leading digits from rest of string
-# creating a 3 column matrix: string, digits, rest
+# creating a 3 column matrix: original string, digits, rest
 s <- c("123abc", "12cd34", "1e23")
 t(strapply(s, "^([[:digit:]]+)(.*)", c, simplify = TRUE)) 
+
+# same but create data.frame
+strapply(s, "^([[:digit:]]+)(.*)", ~ data.frame(string, digits, rest), 
+   simplify = rbind)
 
 # running window of 5 characters using 0-lookahead perl regexp
 x <- "abcdefghijkl"
@@ -60,10 +68,8 @@ parms[["CPU_SPEED"]][2]
 # convert to chron
 library(chron)
 x <- c("01/15/2005 23:32:45", "02/27/2005 01:22:30")
-x.chron <- strapply(x, "(../../....) (..:..:..)",  chron, backref = -2)
-do.call(c, x.chron)
-
-
+x.chron <- strapply(x, "(../../....) (..:..:..)",  chron, backref = -2, 
+   simplify = c)
 }
 }
 \keyword{character}
